force-app/main/default/objects/Promoter_Company__mdt/Promoter_Company__mdt.object-meta.xml
<CustomObject>
    <description>To store the values of the Promoter Companies</description>
    <label>Promoter Company</label>
    <pluralLabel>Promotor Companies</pluralLabel>
</CustomObject>