force-app/main/default/objects/Promoter_Company__mdt/fields/PromotorCIN__c.field-meta.xml
<CustomField>
    <fullName>PromotorCIN__c</fullName>
    <label>PromotorCIN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>