force-app/main/default/objects/Promoter_Company__mdt/fields/PromotorDetails__c.field-meta.xml
<CustomField>
    <fullName>PromotorDetails__c</fullName>
    <label>PromotorDetails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>