force-app/main/default/objects/Promoter_Company__mdt/fields/PromotorLabel__c.field-meta.xml
<CustomField>
    <fullName>PromotorLabel__c</fullName>
    <label>PromotorLabel</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>