force-app/main/default/objects/Promoter_Company__mdt/fields/PromotorLEI__c.field-meta.xml
<CustomField>
    <fullName>PromotorLEI__c</fullName>
    <label>PromotorLEI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>