force-app/main/default/objects/Promoter_Company__mdt/fields/PromotorPAN__c.field-meta.xml
<CustomField>
    <fullName>PromotorPAN__c</fullName>
    <label>PromotorPAN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>